por aplicar backend

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Bitter:ital,wght@1,300&family=Oxygen:wght@300&display=swap" rel="stylesheet">
-    <title>Steven Astur</title>
+    <title>Mili y Steven</title>
   </head>
   <body>
     <div id="root"></div>
